# IDKPhysics

./: CMakeLists.txt  IDKPhysics.hpp  common.hpp  world.cpp  world.hpp
body/: body.cpp  body.hpp  rigidbody.cpp  rigidbody.hpp  staticbody.cpp  staticbody.hpp
shape/: cuboid.cpp  cuboid.hpp  shape.hpp  sphere.cpp  sphere.hpp
src/IDKPhysics/: IDKPhysics.cpp  IDKPhysics.hpp  README.md  body-manager.cpp  body-manager.hpp  body.hpp  common.cpp  common.hpp  query.cpp  query.hpp  world.cpp  world.hpp
src/IDKPhysics/body/: airfoil.cpp  airfoil.hpp  body.cpp  body.hpp  rigidbody.cpp  rigidbody.hpp  softbody.hpp  state.cpp  state.hpp  staticbody.cpp  staticbody.hpp  verletbody.cpp  verletbody.hpp
src/IDKPhysics/collision/: collision-info.hpp  collision-list.cpp  collision-list.hpp  collision.hpp  detect.cpp  register.cpp  resolve.cpp
src/IDKPhysics/constraint/: constraint.hpp  distance.cpp  distance.hpp  glue.cpp  glue.hpp  spring.cpp  spring.hpp  verlet.cpp  verlet.hpp
src/IDKPhysics/shape/: AABB.cpp  AABB.hpp  OBB.cpp  OBB.hpp  collision.cpp  collision.hpp  heightmap.cpp  heightmap.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
